--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <link rel='stylesheet' type='text/css' media='screen' href='assets/style/css/main.css'>
     <link rel="shortcut icon" href="assets/img/logo_icon.svg" type="image/x-icon">
+    <link rel="apple-touch-icon" href="assets/img/logo_icon.svg">
     <link rel="manifest" href="manifest.webmanifest">
 
     <script src='assets/js/main.js'></script>
